<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaiduMapDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pass_word">密码</string>
    <string name="user_name">账号</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="rigister_now">立即注册</string>
    <string name="have_no_acount">还没有账号</string>
    <string name="login">登录</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="register">注册</string>
    <string name="network_error">网络异常，请检查网络</string>
    <string name="user_name_null">用户名为空</string>
    <string name="password_null">密码为空</string>
    <string name="input_confirm_pwd">请填写确认密码</string>
    <string name="pwd_inconformity">确认密码不一致</string>
    <string name="remember_pwd">记住密码</string>
    <string name="logining">正在登录</string>

</resources>
