<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:orientation="vertical"
    android:padding="22dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/logo_margintop"
            android:layout_marginTop="@dimen/logo_margintop"
            android:contentDescription="@null"
            android:src="@drawable/ic_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_01"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/edit_padding_left" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="85dp"
                android:text="@string/user_name"
                android:textColor="@color/login_text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textSize="15sp"
                android:paddingRight="@dimen/edit_padding_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_02"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/edit_padding_left" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="85dp"
                android:text="@string/pass_word"
                android:textColor="@color/login_text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp"
                android:paddingRight="@dimen/edit_padding_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_02"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/edit_padding_left" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="85dp"
                android:text="@string/confirm_pwd"
                android:textColor="@color/login_text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/checkPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp"
                android:paddingRight="@dimen/edit_padding_right" />
        </LinearLayout>
        
        <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_btn_marginbottom"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_register"
        android:gravity="center"
        android:paddingBottom="@dimen/login_btn_text_padding"
        android:paddingTop="@dimen/login_btn_text_padding"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/login_btn_textsize" />
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_checbox_margintop"
            android:gravity="center_vertical" >

            <com.alan.findfamily.view.CheckBoxNoPersistentText
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="同意找家人用户协议"
                android:textColor="@color/login_text_color"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/gotoXieyiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:background="@android:color/transparent"
                android:src="@drawable/goto_xieyi" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>